Fixed drag and drop offset issue